Reduce warning count.

--- a/res/layout/item_event.xml
+++ b/res/layout/item_event.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tvEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Event Name"
+        android:text="@string/event_name_label"
         android:textColor="@color/chick_tech_green"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -19,7 +19,7 @@
         android:layout_below="@id/tvEventName"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="Event Description" />
+        android:text="@string/event_desc_label" />
 
     <LinearLayout
         android:id="@+id/llDate"
@@ -35,13 +35,14 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/calendar_icon"
             android:src="@drawable/ic_calendar" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="October 12, 2014" />
+            android:text="@string/date_label" />
     </LinearLayout>
 
     <LinearLayout
@@ -57,13 +58,14 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/clock_icon"
             android:src="@drawable/ic_clock" />
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10am - 5pm" />
+            android:text="@string/time_label" />
         
     </LinearLayout>
 
@@ -80,13 +82,14 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/location_icon"
             android:src="@drawable/ic_location" />
 
         <TextView
             android:id="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SF State Auditorium" />
+            android:text="@string/location_label" />
     </LinearLayout>
 
     <LinearLayout
@@ -103,7 +106,7 @@
 	        android:id="@+id/tvRSVPStatus"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="You have not RSVPd" />
+	        android:text="@string/rsvp_not" />
 
 	    <Button
 	        android:id="@+id/btnRSVP"
@@ -111,7 +114,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:visibility="gone"
-	        android:text="RSVP" />
+	        android:text="@string/action_rsvp" />
     
     </LinearLayout>
 
