--- a/res/layout/activity_event_detail.xml
+++ b/res/layout/activity_event_detail.xml
@@ -8,9 +8,9 @@
         android:id="@+id/tvEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Event Name"
-        android:textColor="@color/chick_tech_green"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/event_name_label"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/chick_tech_green" />
 
     <LinearLayout
         android:id="@+id/llRSVP"
@@ -26,18 +26,10 @@
 	        android:id="@+id/tvRSVPStatus"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="You have not RSVPd" />
+	        android:text="@string/rsvp_not" />
 
-	    <Button
-	        android:id="@+id/btnRSVP"
-	        style="?android:attr/buttonStyleSmall"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:visibility="gone"
-	        android:text="RSVP" />
-    
     </LinearLayout>
-
+    
     <LinearLayout
         android:id="@+id/llDate"
         android:layout_width="match_parent"
@@ -52,13 +44,14 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/calendar_icon"
             android:src="@drawable/ic_calendar" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="October 12, 2014" />
+            android:text="@string/date_label" />
     </LinearLayout>
 
     <LinearLayout
@@ -74,13 +67,14 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/clock_icon"
             android:src="@drawable/ic_clock" />
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10am - 5pm" />
+            android:text="@string/time_label" />
         
     </LinearLayout>
 
@@ -97,32 +91,33 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginRight="5dp"
+            android:contentDescription="@string/location_icon"
             android:src="@drawable/ic_location" />
 
         <TextView
             android:id="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SF State Auditorium" />
+            android:text="@string/location_label" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/tvEventDescription"
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/llLocation"
-        android:text="Event Description" />
+        android:layout_marginTop="10dp"
+        android:text="@string/event_desc_label" />
 
     <TextView
         android:id="@+id/tvPeopleTitle"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvEventDescription"
-        android:text="26 Girls Are Going" 
-        android:textColor="@color/chick_tech_green"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/girls_going_label"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/chick_tech_green" />
 
     <ListView
         android:id="@+id/lvGirlsGoing"
