--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <org.chicktech.FragmentNavigationDrawer
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:theme="@style/AppTheme"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
