Load event from Parse on create of event detail screen. Sort event list from server ascending by startDate. Turn off list of attendees on event detail for now.

--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -118,6 +118,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/girls_going_label"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="gone"
         android:textColor="@color/chick_tech_green" />
 
     <ListView
@@ -125,6 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvPeopleTitle"
+        android:visibility="gone"
         android:layout_below="@+id/tvPeopleTitle" >
     </ListView>
 
