--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,11 +9,11 @@
     tools:context="org.chicktech.chicktech.activities.LoginActivity">
 
     <EditText
+        android:id="@+id/etPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
-        android:id="@+id/editText"
         android:layout_alignParentTop="true"
         android:layout_marginTop="50dp"
         android:layout_alignParentLeft="true"
@@ -31,6 +31,6 @@
         android:text="Get Started"
         android:id="@+id/btnSignOn"
         android:onClick="onClickSignOn"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/etPhoneNumber"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
