--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="My Name"
                 android:id="@+id/etName"
                 android:layout_alignTop="@+id/imgPhoto"
                 android:layout_toRightOf="@+id/imgPhoto"
@@ -37,20 +36,23 @@
                 android:layout_toStartOf="@+id/btnEdit"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:hint="No Name"
+                android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="School Year"
-                android:id="@+id/tvYear"
+                android:id="@+id/tvDetails"
                 android:layout_toRightOf="@+id/imgPhoto"
                 android:layout_alignRight="@+id/etName"
                 android:layout_alignEnd="@+id/etName"
                 android:layout_below="@+id/etName"
                 android:layout_alignBottom="@+id/imgPhoto"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" />
+                android:layout_marginRight="10dp"
+                android:singleLine="false"
+                android:hint="School &amp; Year" />
 
             <Button
                 android:layout_width="40dp"
@@ -195,12 +197,13 @@
                 android:id="@+id/tvWhatLabel"
                 android:layout_marginBottom="10dp"/>
 
-            <GridView
+            <com.wefika.flowlayout.FlowLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/gridView"
-                android:numColumns="3"
-                tools:listitem="@android:layout/simple_list_item_1" />
+                android:gravity="start|top"
+                android:id="@+id/flWhat">
+
+            </com.wefika.flowlayout.FlowLayout>
 
         </LinearLayout>
     </LinearLayout>
