--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -21,7 +21,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:background="#DDDDDD" />
+                android:background="#DDDDDD"
+                android:scaleType="centerCrop" />
 
             <EditText
                 android:layout_width="wrap_content"
