--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/event_name_label"
-        android:textColor="@color/chick_tech_green"
+        android:textColor="@color/teal"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
