Save and retrieve address

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -154,10 +154,11 @@
                     android:src="@drawable/ic_house_gray"
                     android:layout_weight="1"/>
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="100">
+                    android:layout_weight="100"
+                    android:orientation="vertical">
 
                     <EditText
                         android:layout_width="match_parent"
@@ -165,39 +166,30 @@
                         android:hint="Address Line 1"
                         android:id="@+id/etAddress1"
                         android:inputType="textPostalAddress"
-                        android:singleLine="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"/>
+                        android:singleLine="true"/>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address Line 2"
                         android:id="@+id/etAddress2"
                         android:inputType="textPostalAddress"
-                        android:singleLine="true"
-                        android:layout_below="@id/etAddress1"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"/>
+                        android:singleLine="true"/>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="City"
+                        android:id="@+id/etCity"
+                        android:inputType="textPostalAddress"
+                        android:singleLine="true"/>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/etAddress2"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
                         android:orientation="horizontal">
 
-                        <EditText
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="City"
-                            android:id="@+id/etCity"
-                            android:inputType="textPostalAddress"
-                            android:singleLine="true"
                             android:layout_weight="100"/>
                         <EditText
                             android:layout_width="wrap_content"
@@ -211,7 +203,7 @@
                         <EditText
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:hint="Zip"
+                            android:hint=" Zip "
                             android:id="@+id/etZip"
                             android:inputType="number"
                             android:singleLine="true"
@@ -219,7 +211,7 @@
                             android:layout_weight="1"/>
                         </LinearLayout>
 
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
 
         </RelativeLayout>
